syntax = "proto3";
package heart_beat.v1;

import "google/protobuf/timestamp.proto";

message HeartBeat {
  int32 server_id = 1;
  string ip = 2;
  optional int32 rack_id = 3;
  float cpu_usage = 4;
  float total_storage_used = 5;
  google.protobuf.Timestamp timestamp = 6;
}
